--- a/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
@@ -11,6 +11,7 @@ loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
+analyze_on_all_tables: true
 yaml_version: v1.0
 works:
     work:
@@ -25,42 +26,34 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS employees_with_1_fk;
             - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
-            - DROP TABLE IF EXISTS employees1_with_2_fk_2_parent;
-            - DROP TABLE IF EXISTS employees2_with_2_fk_2_parent;
 
             - DROP TABLE IF EXISTS projects_with_1_ref;
             - DROP TABLE IF EXISTS projects_with_2_ref_1_child;
-            - DROP TABLE IF EXISTS projects_with_2_ref_2_child;
             - DROP TABLE IF EXISTS projects_without_ref;
 
             - create table projects_with_1_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
             - create table projects_with_2_ref_1_child(id int, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
-            - create table projects_with_2_ref_2_child(id int, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
             - create table projects_without_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
 
             - create table employees_with_1_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
             - create table employees_with_2_fk_1_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_uid1 int not null, project_uid2 int not null, primary key(id asc));
-            - create table employees1_with_2_fk_2_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
-            - create table employees2_with_2_fk_2_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_1_fk;
             - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
-            - DROP TABLE IF EXISTS employees1_with_2_fk_2_parent;
-            - DROP TABLE IF EXISTS employees2_with_2_fk_2_parent;
+
             - DROP TABLE IF EXISTS projects_with_1_ref;
             - DROP TABLE IF EXISTS projects_with_2_ref_1_child;
-            - DROP TABLE IF EXISTS projects_with_2_ref_2_child;
             - DROP TABLE IF EXISTS projects_without_ref;
         loadRules:
             - table: projects_with_1_ref
-              rows: 10000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: uid
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -75,14 +68,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: projects_without_ref
-              rows: 10000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: uid
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -97,42 +90,17 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: projects_with_2_ref_1_child
-              rows: 10000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: uid1
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: uid2
                     util: PrimaryIntGen
-                    params: [1, 10000]
-                  - name: name
-                    util: RandomAString
-                    params: [1, 20]
-                  - name: start_date
-                    util: RandomDateBtwYears
-                    params: [2000, 2025]
-                  - name: end_date
-                    util: RandomDateBtwYears
-                    params: [2000, 2025]
-                  - name: budget
-                    util: RandomNoWithDecimalPoints
-                    params: [1, 1000000, 2]
-
-            - table: projects_with_2_ref_2_child
-              rows: 10000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 10000]
-                  - name: uid1
-                    util: PrimaryIntGen
-                    params: [1, 10000]
-                  - name: uid2
-                    util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -147,11 +115,11 @@ microbenchmark:
                     params: [1, 1000000, 2]
               
             - table: employees_with_1_fk
-              rows: 100000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -169,14 +137,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
 
             - table: employees_with_2_fk_1_parent
-              rows: 100000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -194,67 +162,15 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_uid1
                     util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
                   - name: project_uid2
                     util: RandomInt
-                    params: [1,10000]
-
-            - table: employees1_with_2_fk_2_parent
-              rows: 100000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: name
-                    util: RandomAString
-                    params: [1, 20]
-                  - name: email
-                    util: RandomAString
-                    params: [1, 100]
-                  - name: phone
-                    util: RandomNstring
-                    params: [10, 15]
-                  - name: position
-                    util: RandomAString
-                    params: [1, 10]
-                  - name: salary
-                    util: RandomNoWithDecimalPoints
-                    params: [1, 1000000, 2]
-                  - name: project_id
-                    util: RandomInt
-                    params: [1,10000]
-
-            - table: employees2_with_2_fk_2_parent
-              rows: 100000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: name
-                    util: RandomAString
-                    params: [1, 20]
-                  - name: email
-                    util: RandomAString
-                    params: [1, 100]
-                  - name: phone
-                    util: RandomNstring
-                    params: [10, 15]
-                  - name: position
-                    util: RandomAString
-                    params: [1, 10]
-                  - name: salary
-                    util: RandomNoWithDecimalPoints
-                    params: [1, 1000000, 2]
-                  - name: project_id
-                    util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
 
         afterLoad:
             - ALTER TABLE employees_with_1_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_1_ref(uid) ON DELETE CASCADE ON UPDATE CASCADE;
             - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project1 FOREIGN KEY (project_uid1) REFERENCES projects_with_2_ref_1_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
             - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project2 FOREIGN KEY (project_uid2) REFERENCES projects_with_2_ref_1_child(uid2) ON DELETE CASCADE ON UPDATE CASCADE;
-            - ALTER TABLE employees1_with_2_fk_2_parent add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_2_ref_2_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
-            - ALTER TABLE employees2_with_2_fk_2_parent add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_2_ref_2_child(uid2) ON DELETE CASCADE ON UPDATE CASCADE;
             
         executeRules:
 
@@ -263,12 +179,10 @@ microbenchmark:
                   - name: FK_G2_1_parent_no-fk_update
                     weight: 100
                     queries:
-                        - query: update projects_without_ref set uid=? where id=?;
+                        - query: update projects_without_ref set uid=uid+100000 where id=?;
                           bindings:
-                            - util: RandomInt
-                              params: [1, 900000]
                             - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
 
             - workload: FK_G2_2_parent_no-fk_delete
               run:
@@ -278,19 +192,17 @@ microbenchmark:
                         - query: delete from projects_without_ref where id=?;
                           bindings:
                             - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
 
             - workload: FK_G2_3_parent_1-fk_update
               run:
                   - name: FK_G2_3_parent_1-fk_update
                     weight: 100
                     queries:
-                        - query: update projects_with_1_ref set uid=? where id=?;
+                        - query: update projects_with_1_ref set uid=uid+100000 where id=?;
                           bindings:
-                            - util: RandomInt
-                              params: [1, 900000]
                             - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
 
             - workload: FK_G2_4_parent_1-fk_delete
               run:
@@ -300,20 +212,17 @@ microbenchmark:
                         - query: delete from projects_with_1_ref where id=?;
                           bindings:
                             - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
 
             - workload: FK_G2_5_parent_2-fk_1-child_update
               run:
                   - name: FK_G2_5_parent_2-fk_1-child_update
                     weight: 100
                     queries:
-                        - query: update projects_with_2_ref_1_child set uid1=?, uid2=? where id=?;
+                        - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
                           bindings:
-                            - count: 2
-                              util: RandomInt
-                              params: [1, 900000]
                             - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
 
             - workload: FK_G2_6_parent_2-fk_1-child_delete
               run:
@@ -323,27 +232,4 @@ microbenchmark:
                         - query: delete from projects_with_2_ref_1_child where id=?;
                           bindings:
                             - util: PrimaryIntGen
-                              params: [1, 900000]
-
-            - workload: FK_G2_7_parent_2-fk_2-child_update
-              run:
-                  - name: FK_G2_7_parent_2-fk_2-child_update
-                    weight: 100
-                    queries:
-                        - query: update projects_with_2_ref_2_child set uid1=?, uid2=? where id=?;
-                          bindings:
-                            - count: 2
-                              util: RandomInt
-                              params: [1, 900000]
-                            - util: PrimaryIntGen
-                              params: [1, 900000]
-
-            - workload: FK_G2_8_parent_2-fk_2-child_delete
-              run:
-                  - name: FK_G2_8_parent_2-fk_2-child_delete
-                    weight: 100
-                    queries:
-                        - query: delete from projects_with_2_ref_2_child where id=?;
-                          bindings:
-                            - util: PrimaryIntGen
-                              params: [1, 900000]
+                              params: [1, 100000]
