--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_range_varyingFKconstraint.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_range_varyingFKconstraint.yaml
@@ -25,27 +25,37 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS employees_with_fk_on_pk;
             - DROP TABLE IF EXISTS employees_with_fk_on_uniqueCol;
+            - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
             - DROP TABLE IF EXISTS employees_without_fk;
+
             - DROP TABLE IF EXISTS projects_with_pk;
             - DROP TABLE IF EXISTS projects_with_uniqueCol;
+            - DROP TABLE IF EXISTS projects_with_2_fk;
+
             - create table projects_with_pk(id int, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
             - create table projects_with_uniqueCol(id int, uid int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
+            - create table projects_with_2_fk(id int, uid int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
+
             - create table employees_with_fk_on_pk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
             - create table employees_with_fk_on_uniqueCol(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
+            - create table employees_with_2_fk_1_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id1 int not null, project_id2 int not null, primary key(id asc));
             - create table employees_without_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk_on_pk;
             - DROP TABLE IF EXISTS employees_with_fk_on_uniqueCol;
+            - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
             - DROP TABLE IF EXISTS employees_without_fk;
+
             - DROP TABLE IF EXISTS projects_with_pk;
             - DROP TABLE IF EXISTS projects_with_uniqueCol;
+            - DROP TABLE IF EXISTS projects_with_2_fk;
         loadRules:
             - table: projects_with_pk
-              rows: 10000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -60,14 +70,36 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: projects_with_uniqueCol
-              rows: 10000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
                   - name: uid
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 100000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: start_date
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: end_date
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: budget
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+
+            - table: projects_with_2_fk
+              rows: 100000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: uid
+                    util: PrimaryIntGen
+                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -82,11 +114,11 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: employees_without_fk
-              rows: 100000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -104,14 +136,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
               
             - table: employees_with_fk_on_pk
-              rows: 100000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -129,14 +161,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
 
             - table: employees_with_fk_on_uniqueCol
-              rows: 100000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -154,11 +186,41 @@ microbenchmark:
                     params: [1, 1000000, 2]
                   - name: project_id
                     util: RandomInt
-                    params: [1,10000]
+                    params: [1,100000]
+
+            - table: employees_with_2_fk_1_parent
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: email
+                    util: RandomAString
+                    params: [1, 100]
+                  - name: phone
+                    util: RandomNstring
+                    params: [10, 15]
+                  - name: position
+                    util: RandomAString
+                    params: [1, 10]
+                  - name: salary
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+                  - name: project_id1
+                    util: RandomInt
+                    params: [1,100000]
+                  - name: project_id2
+                    util: RandomInt
+                    params: [1,100000]
 
         afterLoad:
             - ALTER TABLE employees_with_fk_on_pk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_pk(id);
             - ALTER TABLE employees_with_fk_on_uniqueCol add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_uniqueCol(uid);
+            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project1 FOREIGN KEY (project_id1) REFERENCES projects_with_2_fk(id);
+            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project2 FOREIGN KEY (project_id2) REFERENCES projects_with_2_fk(uid);
             
         executeRules:
 
@@ -170,7 +232,7 @@ microbenchmark:
                         - query: insert into employees_with_fk_on_pk values(?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
-                                params: [100001, 900000]
+                                params: [1000001, 9000000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -182,7 +244,7 @@ microbenchmark:
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
                               - util: RandomNumber
-                                params: [1,10000]
+                                params: [1,100000]
 
             - workload: FK_G1_2_fk-on-pk_update
               run:
@@ -192,9 +254,9 @@ microbenchmark:
                         - query: update employees_with_fk_on_pk set project_id=? where id=?;
                           bindings:
                             - util: RandomInt
-                              params: [1, 10000]
-                            - util: PrimaryIntGen
                               params: [1, 100000]
+                            - util: PrimaryIntGen
+                              params: [1, 1000000]
 
             - workload: FK_G1_3_fk-on-uniqueCol_insert
               run:
@@ -204,7 +266,7 @@ microbenchmark:
                         - query: insert into employees_with_fk_on_uniqueCol values(?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
-                                params: [100001, 900000]
+                                params: [1000001, 9000000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -216,7 +278,7 @@ microbenchmark:
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
                               - util: RandomNumber
-                                params: [1,10000]
+                                params: [1,100000]
 
             - workload: FK_G1_4_fk-on-uniqueCol_update
               run:
@@ -226,9 +288,9 @@ microbenchmark:
                         - query: update employees_with_fk_on_uniqueCol set project_id=? where id=?;
                           bindings:
                             - util: RandomInt
-                              params: [1, 10000]
-                            - util: PrimaryIntGen
                               params: [1, 100000]
+                            - util: PrimaryIntGen
+                              params: [1, 1000000]
 
             - workload: FK_G1_5_no-fk_insert
               run:
@@ -238,7 +300,7 @@ microbenchmark:
                         - query: insert into employees_without_fk values(?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
-                                params: [100001, 900000]
+                                params: [1000001, 9000000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -250,7 +312,7 @@ microbenchmark:
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
                               - util: RandomInt
-                                params: [1,10000]
+                                params: [1,100000]
 
             - workload: FK_G1_6_no-fk_update
               run:
@@ -260,6 +322,44 @@ microbenchmark:
                         - query: update employees_without_fk set project_id=? where id=?;
                           bindings:
                             - util: RandomInt
-                              params: [1, 10000]
-                            - util: PrimaryIntGen
                               params: [1, 100000]
+                            - util: PrimaryIntGen
+                              params: [1, 1000000]
+
+            - workload: FK_G1_7_2-fk_1-parent_insert
+              run:
+                  - name: FK_G1_7_2-fk_1-parent_insert
+                    weight: 100
+                    queries:
+                        - query: insert into employees_with_2_fk_1_parent values(?,?,?,?,?,?,?,?);
+                          bindings:
+                              - util: PrimaryIntGen
+                                params: [1000001, 9000000]
+                              - util: RandomAString
+                                params: [1, 20]
+                              - util: RandomAString
+                                params: [1, 100]
+                              - util: RandomNstring
+                                params: [10, 15]
+                              - util: RandomAString
+                                params: [1, 10]
+                              - util: RandomNoWithDecimalPoints
+                                params: [1, 1000000, 2]
+                              - util: RandomInt
+                                params: [1,100000]
+                              - util: RandomInt
+                                params: [1,100000]
+
+            - workload: FK_G1_8_2-fk_1-parent_update
+              run:
+                  - name: FK_G1_8_2-fk_1-parent_update
+                    weight: 100
+                    queries:
+                        - query: update employees_with_2_fk_1_parent set project_id1=?, project_id2=? where id=?;
+                          bindings:
+                            - util: RandomInt
+                              params: [1, 100000]
+                            - util: RandomInt
+                              params: [1, 100000]
+                            - util: PrimaryIntGen
+                              params: [1, 1000000]
